test/compile_errors/err_derive_hash_field_without_hash.w
//! expect-error: cannot derive Hash for type 'UsesNoHash': field 'value' of type 'NoHash' does not implement Hash

type NoHash { value: i32 }

@[derive(Hash)]
type UsesNoHash { value: NoHash }

fn main:
    let _ = UsesNoHash { value: NoHash { value: 1 } }
